--- a/test-output/old/Functional Suite/Validate Test.properties
+++ b/test-output/old/Functional Suite/Validate Test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Login Test][SuiteResult context=Validate Test][SuiteResult context=Dependency Test]
+[SuiteResult context=Login Test][SuiteResult context=Validate Test][SuiteResult context=Dependency Test][SuiteResult context=Failure Test]
